# bbs

./: .env  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.development.yml  docker-entrypoint.sh  setup.sh  user-settings.sh
.devcontainer/dotfiles/: .myclirc.sample
backend/: .dockerignore  .env  .gitignore  Makefile  docker-compose.yml  pyproject.toml  setup.cfg
backend/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.development.yml  docker-entrypoint.sh  setup.sh
backend/.devcontainer/dotfiles/: .zshrc.sample
backend/config/mysql/conf.d/: my.cnf
backend/config/nginx/: nginx.conf
backend/docker/dev/: docker-compose.production.yml
backend/docker/local/: docker-compose.test.yml
backend/src/: Dockerfile  docker-entrypoint.sh
backend/src/app/: database.py  exceptions.py  logging_config.py
backend/src/app/api/: error_handlers.py  hooks.py
backend/src/tests/: test_exceptions.py  test_open_api_spec.py
backend/src/tests/api/: test_error_handlers.py
config/mysql/conf.d/: my.cnf
config/nginx/: nginx.conf
config/nginx/conf.d/: default.conf
docker/local/: docker-compose.production.yml
docs/: swagger_spec.yaml
infrastructure/: .gitignore  backend.sample.tfvars  main.tf  outputs.tf  terraform.sample.tfvars  variables.tf
infrastructure/.devcontainer/: Dockerfile  devcontainer.json  setup.sh
src/: Dockerfile  docker-entrypoint.sh  logging.yaml  run.py  uwsgi.ini
src/app/: config.py  database.py  logging.py  logging_config.py  open_api_spec.py  parse_open_api_spec.py
src/app/api/: __init__.py  error_handlers.py  hooks.py
src/app/controllers/: __init__.py  get_threads.py
src/app/models/: __init__.py  thread.py  utils.py
src/app/schemas/: thread_schema.py
src/migrations/: env.py
src/migrations/versions/: 9713a107b7bb_.py
src/tests/: test_config.py  test_logging.py  test_open_api_spec.py  test_pytest_sample.py
src/tests/api/: test_error_handlers.py  test_hooks.py
(+13 files in other folders)
