[tool.poetry]
name = "bbs"
version = "0.1.0"
description = "This is a sample project for technical learning of back-end engineers."
authors = ["takenoco82 <reg.takenoco@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
pytest = "^5.2"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
